--- a/mod3/actividad4/galeria.html
+++ b/mod3/actividad4/galeria.html
@@ -27,25 +27,25 @@
 
       <div class="div1">
         <div class="div-image">
-          <img src="images/300x300/img-1_300x300.jpg" alt="princesa">
+          <img src="images/300x300/img-1.jpg" alt="princesa">
         </div>
         <div class="div-image">
-          <img src="images/300x300/img-2_300x300.jpg" alt="princesa">
+          <img src="images/300x300/img-2.jpg" alt="princesa">
         </div>
         <div class="div-image">
-          <img src="images/300x300/img-3_300x300.jpg" alt="princesa">
+          <img src="images/300x300/img-3.jpg" alt="princesa">
         </div>         
 
       </div>
       <div class="div2">
         <div class="div-image">
-          <img src="images/300x300/img-4_300x300.jpg" alt="princesa">
+          <img src="images/300x300/img-4.jpg" alt="princesa">
         </div>
         <div class="div-image">
-          <img src="images/300x300/img-5_300x300.jpg" alt="princesa">
+          <img src="images/300x300/img-5.jpg" alt="princesa">
         </div>
         <div class="div-image">
-          <img src="images/300x300/img-6_300x300.jpg" alt="princesa">
+          <img src="images/300x300/img-6.jpg" alt="princesa">
         </div>    
       </div>
 
