--- a/mod3/actividad4/index.html
+++ b/mod3/actividad4/index.html
@@ -11,7 +11,7 @@
   <body>
     
     <header>
-      <h1>SPA Buenas Vacaciones</h1>
+      <h1>SPA Buenas Vacaciones 3</h1>
     </header>
  
     <nav>
