--- a/mod3/actividad4/index.html
+++ b/mod3/actividad4/index.html
@@ -12,11 +12,7 @@
   <body>
     
     <header>
-<<<<<<< HEAD
-      <h1>SPA Buenas Vacaciones 2</h1>
-=======
-      <h1>SPA Buenas Vacaciones 3</h1>
->>>>>>> testing
+      <h1>SPA Buenas Vacaciones</h1>
     </header>
  
     <nav>
