Agregar galería de imágenes tipo lightbox

--- a/mod3/actividad4/galeria.html
+++ b/mod3/actividad4/galeria.html
@@ -24,29 +24,89 @@
     <main>
 
       <h2>Galería de Imágenes</h2>
+      
+      <div id="galeria" class="galeria">
+        <div class="box">
+          <a href="#img1"><img src="images/300x300/img-1.jpg" alt="Imagen 1"></a>
+        </div>
+        <div class="box">
+          <a href="#img2"><img src="images/300x300/img-2.jpg" alt="Imagen 2"></a>
+        </div>
+        <div class="box">
+          <a href="#img3"><img src="images/300x300/img-3.jpg" alt="Imagen 3"></a>
+        </div>
+        <div class="box">
+          <a href="#img4"><img src="images/300x300/img-4.jpg" alt="Imagen 4"></a>
+        </div>
+        <div class="box">
+          <a href="#img5"><img src="images/300x300/img-5.jpg" alt="Imagen 5"></a>
+        </div>
+        <div class="box">
+          <a href="#img6"><img src="images/300x300/img-6.jpg" alt="Imagen 6"></a>
+        </div>
 
-      <div class="div1">
-        <div class="div-image">
-          <img src="images/300x300/img-1.jpg" alt="princesa">
+        <div class="modal" id="img1">
+          <h3>Imágen 1</h3>
+          <div class="imagen">
+            <a href="#img6">&lt;</a>
+            <a href="#img2"><img src="images/img-1.jpg"></a>
+            <a href="#img2">&gt</a>
+          </div>
+          <a class="cerrar" href="#galeria">X</a>
         </div>
-        <div class="div-image">
-          <img src="images/300x300/img-2.jpg" alt="princesa">
-        </div>
-        <div class="div-image">
-          <img src="images/300x300/img-3.jpg" alt="princesa">
-        </div>         
 
-      </div>
-      <div class="div1">
-        <div class="div-image">
-          <img src="images/300x300/img-4.jpg" alt="princesa">
+        <div class="modal" id="img2">
+          <h3>Imágen 2</h3>
+          <div class="imagen">
+            <a href="#img1">&lt;</a>
+            <a href="#img3"><img src="images/img-2.jpg"></a>
+            <a href="#img3">&gt</a>
+          </div>
+          <a class="cerrar" href="#galeria">X</a>
         </div>
-        <div class="div-image">
-          <img src="images/300x300/img-5.jpg" alt="princesa">
+
+        <div class="modal" id="img3">
+          <h3>Imágen 3</h3>
+          <div class="imagen">
+            <a href="#img2">&lt;</a>
+            <a href="#img4"><img src="images/img-3.jpg"></a>
+            <a href="#img4">&gt</a>
+          </div>
+          <a class="cerrar" href="#galeria">X</a>
         </div>
-        <div class="div-image">
-          <img src="images/300x300/img-6.jpg" alt="princesa">
-        </div>    
+
+        <div class="modal" id="img4">
+          <h3>Imágen 4</h3>
+          <div class="imagen">
+            <a href="#img3">&lt;</a>
+            <a href="#img5"><img src="images/img-4.jpg"></a>
+            <a href="#img5">&gt</a>
+          </div>
+          <a class="cerrar" href="#galeria">X</a>
+        </div>
+
+        <div class="modal" id="img5">
+          <h3>Imágen 5</h3>
+          <div class="imagen">
+            <a href="#img5">&lt;</a>
+            <a href="#img6"><img src="images/img-5.jpg"></a>
+            <a href="#img6">&gt</a>
+          </div>
+          <a class="cerrar" href="#galeria">X</a>
+        </div>
+
+        <div class="modal" id="img6">
+          <h3>Imágen 6</h3>
+          <div class="imagen">
+            <a href="#img5">&lt;</a>
+            <a href="#img1"><img src="images/img-6.jpg"></a>
+            <a href="#img1">&gt</a>
+          </div>
+          <a class="cerrar" href="#galeria">X</a>
+        </div>
+
+
+
       </div>
 
     </main>
