--- a/mod3/actividad4/galeria.html
+++ b/mod3/actividad4/galeria.html
@@ -23,7 +23,7 @@
 
     <main>
 
-      <h2>Galería de Imágenes</h2>
+      <h2>Galería de Imagenes</h2>
       
       <div id="galeria" class="galeria">
         <div class="box">
@@ -46,63 +46,63 @@
         </div>
 
         <div class="modal" id="img1">
-          <h3>Imágen 1</h3>
+          <h3>Imagen 1</h3>
           <div class="imagen">
             <a href="#img6">&lt;</a>
             <a href="#img2"><img src="images/img-1.jpg"></a>
             <a href="#img2">&gt</a>
           </div>
-          <a class="cerrar" href="#galeria">X</a>
+          <a class="cerrar" href="#galeria">x</a>
         </div>
 
         <div class="modal" id="img2">
-          <h3>Imágen 2</h3>
+          <h3>Imagen 2</h3>
           <div class="imagen">
             <a href="#img1">&lt;</a>
             <a href="#img3"><img src="images/img-2.jpg"></a>
             <a href="#img3">&gt</a>
           </div>
-          <a class="cerrar" href="#galeria">X</a>
+          <a class="cerrar" href="#galeria">x</a>
         </div>
 
         <div class="modal" id="img3">
-          <h3>Imágen 3</h3>
+          <h3>Imagen 3</h3>
           <div class="imagen">
             <a href="#img2">&lt;</a>
             <a href="#img4"><img src="images/img-3.jpg"></a>
             <a href="#img4">&gt</a>
           </div>
-          <a class="cerrar" href="#galeria">X</a>
+          <a class="cerrar" href="#galeria">x</a>
         </div>
 
         <div class="modal" id="img4">
-          <h3>Imágen 4</h3>
+          <h3>Imagen 4</h3>
           <div class="imagen">
             <a href="#img3">&lt;</a>
             <a href="#img5"><img src="images/img-4.jpg"></a>
             <a href="#img5">&gt</a>
           </div>
-          <a class="cerrar" href="#galeria">X</a>
+          <a class="cerrar" href="#galeria">x</a>
         </div>
 
         <div class="modal" id="img5">
-          <h3>Imágen 5</h3>
+          <h3>Imagen 5</h3>
           <div class="imagen">
-            <a href="#img5">&lt;</a>
+            <a href="#img4">&lt;</a>
             <a href="#img6"><img src="images/img-5.jpg"></a>
             <a href="#img6">&gt</a>
           </div>
-          <a class="cerrar" href="#galeria">X</a>
+          <a class="cerrar" href="#galeria">x</a>
         </div>
 
         <div class="modal" id="img6">
-          <h3>Imágen 6</h3>
+          <h3>Imagen 6</h3>
           <div class="imagen">
             <a href="#img5">&lt;</a>
             <a href="#img1"><img src="images/img-6.jpg"></a>
             <a href="#img1">&gt</a>
           </div>
-          <a class="cerrar" href="#galeria">X</a>
+          <a class="cerrar" href="#galeria">x</a>
         </div>
 
 
