Reduce el tamaño de las imágenes de fondo

--- a/mod3/actividad4/procesamiento.html
+++ b/mod3/actividad4/procesamiento.html
@@ -28,7 +28,7 @@
     <main>
         <style>
             body {
-              background-image: url('images/Relax.png');
+              background-image: url('images/relax.jpg');
               background-repeat: repeat;
               
             }
