--- a/mod3/actividad4/servicios.html
+++ b/mod3/actividad4/servicios.html
@@ -11,7 +11,7 @@
   <body>
         <style>
         body {
-          background-image: url('images/Green.png');
+          background-image: url('images/green.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
