--- a/mod3/actividad4/index.html
+++ b/mod3/actividad4/index.html
@@ -14,7 +14,7 @@
   <body>
     <style>
         body {
-          background-image: url('images/spa-Inicio.jpg');
+          background-image: url('images/spa-inicio.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
