--- a/mod3/act5/web/rutas.html
+++ b/mod3/act5/web/rutas.html
@@ -10,84 +10,99 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body class="container">
+<body>
 
     <!--Navegación-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary my-2">
-        <a class="navbar-brand" href="#">Buenas Vacaciones</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item  active">
-                    <a class="nav-link" href="#">Rutas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Buenas Vacaciones</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item active text-center">
+                        <a class="nav-link" href="rutas.html">Rutas</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!--/.Navegación-->
 
-    <main>
+    <main class="container-fluid">
+        <h2 class="py-4 text-center">Excursiones</h2>
+        <div class="jumbotron">
 
-        <div class="row">
+            
+            <div class="row">
 
-            <div class="card col-md-6 col-lg-4">
-                <img class="card-img-top" src="img/navegacion_grey.jpg" alt="Glaciar Grey">
-                <div class="card-body d-flex flex-column">
-                    <h4 class="card-title">Glaciar Grey</h4>
-                    <p class="card-text">Desde el Hotel Lago Grey, llegamos en minutos al Río Pingo donde
-                        cruzamos su puente
-                        para luego atravesar un bosque nativo y embarcar a orillas del Lago Grey. </p>
-                    <h5>Salidas: 10:00</h5>
-                    <h5>Duración: 3 horas</h5>
-                    <h5>Precio: $80.000</h5>
-                    <a class="btn btn-primary align-self-end">Reservar</a>
+                <div class="card col-md-6 col-lg-4">
+                    <img class="card-img-top" src="img/navegacion_grey.jpg" alt="Glaciar Grey">
+                    <div class="card-body d-flex flex-column">
+                        <h4 class="card-title">Glaciar Grey</h4>
+                        <p class="card-text">Desde el Hotel Lago Grey, llegamos en minutos al Río Pingo donde
+                            cruzamos su puente
+                            para luego atravesar un bosque nativo y embarcar a orillas del Lago Grey. </p>
+                        <h5>Salidas: 10:00</h5>
+                        <h5>Duración: 3 horas</h5>
+                        <h5>Precio: $80.000</h5>
+                        <a class="btn btn-primary align-self-end">Reservar</a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card col-md-6 col-lg-4">
-                <img class="card-img-top" src="img/moreno.jpg" alt="Glaciar Perito Moreno">
-                <div class="card-body d-flex flex-column">
-                    <h4 class="card-title">Glaciar Perito Moreno</h4>
-                    <p class="card-text">Una travesía por la estepa patagónica hasta el glaciar Perito
-                        Moreno, Argentina,
-                        para apreciar uno de los espectáculos naturales más impactantes de Sudamérica.</p>
-                    <h5>Salidas: 6:30</h5>
-                    <h5>Duración: Día Completo</h5>
-                    <h5>Precio: $100.000</h5>
-                    <a class="btn btn-primary align-self-end">Reservar</a>
+                <div class="card col-md-6 col-lg-4">
+                    <img class="card-img-top" src="img/moreno.jpg" alt="Glaciar Perito Moreno">
+                    <div class="card-body d-flex flex-column">
+                        <h4 class="card-title">Glaciar Perito Moreno</h4>
+                        <p class="card-text">Una travesía por la estepa patagónica hasta el glaciar Perito
+                            Moreno, Argentina,
+                            para apreciar uno de los espectáculos naturales más impactantes de Sudamérica.</p>
+                        <h5>Salidas: 6:30</h5>
+                        <h5>Duración: Día Completo</h5>
+                        <h5>Precio: $100.000</h5>
+                        <a class="btn btn-primary align-self-end">Reservar</a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card col-md-6 col-lg-4">
-                <img class="card-img-top" src="img/base_torres.jpg" alt="Base Las Torres">
-                <div class="card-body d-flex flex-column">
-                    <h4 class="card-title">Base Las Torres</h4>
-                    <p class="card-text">Si tu sueño es lograr la icónica postal en los pies de las Torres
-                        del Paine, no te
-                        puedes perder esta oportunidad, Excursión Trekking hacia Base de Las Torres. </p>
-                    <h5>Salidas: 7:00</h5>
-                    <h5>Duración: 8 horas</h5>
-                    <h5>Precio: $70.000</h5>
-                    <a class="btn btn-primary align-self-end">Reservar</a>
+                <div class="card col-md-6 col-lg-4">
+                    <img class="card-img-top" src="img/base_torres.jpg" alt="Base Las Torres">
+                    <div class="card-body d-flex flex-column">
+                        <h4 class="card-title">Base Las Torres</h4>
+                        <p class="card-text">Si tu sueño es lograr la icónica postal en los pies de las Torres
+                            del Paine, no te
+                            puedes perder esta oportunidad, Excursión Trekking hacia Base de Las Torres. </p>
+                        <h5>Salidas: 7:00</h5>
+                        <h5>Duración: 8 horas</h5>
+                        <h5>Precio: $70.000</h5>
+                        <a class="btn btn-primary align-self-end">Reservar</a>
+                    </div>
                 </div>
-            </div>
 
+            </div>
         </div>
-
     </main>
 
-    <footer class="my-2 py-1 small text-center text-light bg-primary">
-        <h6>Spa Buenas Vacaciones &copy;</h6>
-        <div class="pb-1"><i class="fa fa-address-card mr-2 "></i>Av. N°5 555</div>
-        <div class="pb-0"><i class="fa fa-phone mr-2"></i><span>+569 5555 5555</span></div>
+    <footer class="text-light text-center bg-dark py-3">
+        <h6 class="py-2">Spa Buenas Vacaciones &copy;</h6>
+        <div class="mb-2">
+            <span class="fa fa-address-card mr-2 "></span>
+            <a href="https://goo.gl/maps/utkDHHmy3DEa2jZJ8" target="_blank">Av. Miguel Claro 2026 of. 303. Providencia,
+                Santiago</a>
+        </div>
+        <div class="mb-2">
+            <span class="fa fa-envelope mr-2"></span>
+            <a href="mailto:buenasvacaciones@spa.com">buenasvacaciones@spa.com</a>
+        </div>
+        <div class="mb-2">
+            <span class="fa fa-phone mr-2"></span><a href="tel:+56955555555">+569 5555 5555</a>
+        </div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
