--- a/mod3/act5/web/index.html
+++ b/mod3/act5/web/index.html
@@ -15,11 +15,11 @@
     <!--Navegación-->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">SPA Buenas Vacaciones</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+            <a class="navbar-brand" href="index.html">Buenas Vacaciones</a>
+            <button id="navbarToggle" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsableNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="collapsableNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active text-center">
                         <a class="nav-link" href="index.html">Inicio</a>
@@ -111,6 +111,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
