[M3A7] Mejora responsividad del sitio

--- a/mod3/act6/index.html
+++ b/mod3/act6/index.html
@@ -1,18 +1,75 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Hello, world!</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  </head>
 
-  <body>
+<head>
+  <title>Actividad 6</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/estilos.css">
+</head>
 
-    <h1>Hello, world!</h1>
+<body>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  </body>
+  <!--Navegación-->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Buenas Vacaciones</a>
+      <button id="navbarToggle" class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#collapsableNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsableNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active text-center">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item text-center">
+            <a class="nav-link text-nowrap" href="productos-servicios.html">Productos y Servicios</a>
+          </li>
+          <li class="nav-item text-center">
+            <a class="nav-link" href="#">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!--/.Navegación-->
+
+  <main>
+    <div class="jumbotron m-0">
+      <h1 class="text-center text-light">SPA Buenas Vacaciones</h1>
+  </div>
+  </main>
+
+
+  <!--Footer-->
+  <footer class="text-center text-light bg-dark py-3">
+
+    <h6 class="py-2">Spa Buenas Vacaciones &copy; 2020</h6>
+
+    <hr class="w-75">
+
+    <a href="https://goo.gl/maps/utkDHHmy3DEa2jZJ8" target="_blank" class="text-muted text-decoration-none">
+      <div><span class="fa fa-address-card mr-2"></span>Av. Miguel Claro 2026 of. 303. Providencia,
+        Santiago</div>
+    </a>
+
+    <a href="mailto:buenasvacaciones@spa.com" class="text-muted text-decoration-none">
+      <div><span class="fa fa-envelope mr-2"></span>buenasvacaciones@spa.com</div>
+    </a>
+
+    <a href="tel:+56955555555" class="text-muted text-decoration-none">
+      <div><span class="fa fa-phone mr-2"></span>9 5555 5555</div>
+    </a>
+
+  </footer>
+  <!--/Footer-->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
 </html>
