--- a/mod3/act7.8/index.html
+++ b/mod3/act7.8/index.html
@@ -12,58 +12,66 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <!--Navegación-->
         <nav class="navbar navbar-expand-sm navbar-light bg-light border shadow mb-3 ">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="60" height="60">
+            <a href="index.html" class="navbar-brand"><img src="img/logo.png" width="60" height="60">
                 <h1 class="navbar-text small">Minimarket deToDo</h1>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="navbarContent" class="collapse navbar-collapse justify-content-end">
-                <a class="nav-link text-center active" href="index.html">Tiendas</a>
-                <a class="nav-link text-center" href="galeria.html">Productos</a>
+                <div class="navbar-nav">
+                    <a href="index.html" class="nav-link text-center active">Tiendas</a>
+                    <a href="productos.html" class="nav-link text-center">Productos</a>
+                </div>
             </div>
         </nav>
         <!--/.Navegación-->
 
 
-        <main>
+        <main class="container">
 
             <!--Tiendas-->
-            <div class="card-deck">
+            <div class="row justify-content-center">
 
-                <div class="card shadow">
-                    <div class="card-header">La Cisterna</div>
-                    <img src="img/mini1.jpg" class="card-img-top">
-                    <div class="card-body text-center">
-                        <p class="card-text"><span class="fa  fa-address-card-o mr-2"></span>El Parrón 33.</p>
-                        <p class="card-text"><span class="fa  fa-phone mr-2"></span>2 2524 2542</p>
-                        <p class="card-text"><span class="fa  fa-clock-o mr-2"></span>Abierto las 24 horas.</p>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card shadow">
+                        <div class="card-header">La Cisterna</div>
+                        <img src="img/mini1.jpg" class="card-img-top">
+                        <div class="card-body text-center">
+                            <p class="card-text"><span class="fa fa-address-card-o mr-2"></span>El Parrón 33.</p>
+                            <p class="card-text"><span class="fa fa-phone mr-2"></span>2 2524 2542</p>
+                            <p class="card-text"><span class="fa fa-clock-o mr-2"></span>Abierto las 24 horas.</p>
+                        </div>
                     </div>
                 </div>
 
+                <div class="col-md-6 col-lg-4">
                 <div class="card shadow">
                     <div class="card-header">Pudahuel</div>
                     <img src="img/mini2.jpg" class="card-img-top">
                     <div class="card-body text-center">
-                        <p class="card-text"><span class="fa  fa-address-card-o mr-2"></span>Mar de Drake 266.</p>
-                        <p class="card-text"><span class="fa  fa-phone mr-2"></span>9 8775 7224</p>
-                        <p class="card-text"><span class="fa  fa-clock-o mr-2"></span>11:00 a 21:00 horas</p>
+                        <p class="card-text"><span class="fa fa-address-card-o mr-2"></span>Mar de Drake 266.</p>
+                        <p class="card-text"><span class="fa fa-phone mr-2"></span>9 8775 7224</p>
+                        <p class="card-text"><span class="fa fa-clock-o mr-2"></span>11:00 a 21:00 horas</p>
                     </div>
                 </div>
+            </div>
 
+                <div class="col-md-6 col-lg-4">
                 <div class="card shadow">
                     <div class="card-header">Providencia</div>
                     <img src="img/mini3.jpg" class="card-img-top">
                     <div class="card-body text-center">
-                        <p class="card-text"><span class="fa  fa-address-card-o mr-2"></span>Sucre 2714.</p>
-                        <p class="card-text"><span class="fa  fa-phone mr-2"></span>2 2341 3824</p>
-                        <p class="card-text"><span class="fa  fa-clock-o mr-2"></span>Abierto las 24 horas.</p>
+                        <p class="card-text"><span class="fa fa-address-card-o mr-2"></span>Sucre 2714.</p>
+                        <p class="card-text"><span class="fa fa-phone mr-2"></span>2 2341 3824</p>
+                        <p class="card-text"><span class="fa fa-clock-o mr-2"></span>Abierto las 24 horas.</p>
                     </div>
                 </div>
+            </div>
 
             </div>
             <!--Tiendas-->
