[M3A8] Arregla tamaño de tabpanels en pantallas grandes

--- a/mod3/act8/productos.html
+++ b/mod3/act8/productos.html
@@ -34,7 +34,7 @@
         <main class="container">
 
             <!--Categorías-->
-            <div class="row justify-content-center">
+            <div class="row justify-content-center my-3">
                 <div class="col-md-6 col-lg-4">
                     <a href="frutas-verduras.html">
                         <div id="frutas-verduras" class="categoria"><span>Frutas y Verduras</span></div>
@@ -54,7 +54,8 @@
             <!--/Categorías-->
 
             <!--Productos-->
-            <div class="tab-content">
+            <div class="tab-content my-3">
+                <h2 class="text-center">Productos Destacados</h2>
                 <div id="pills-1" class="tab-pane fade show active" role="tabpanel">
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
@@ -170,7 +171,9 @@
                     </div>
                 </div>
             </div>
+            <!--/Productos-->
 
+            <!--Paginación-->
             <ul class="nav nav-pills justify-content-center" role="tablist">
                 <li class="nav-item" role="presentation">
                     <a class="nav-link active" data-toggle="pill" href="#pills-1" role="tab">1</a>
@@ -182,7 +185,7 @@
                     <a class="nav-link" data-toggle="pill" href="#pills-3" role="tab">3</a>
                 </li>
             </ul>
-            <!--/Productos-->
+            <!--/Paginación-->
 
         </main>
         <!--/Galería-->
